mostly fixed the overflow problem by switching to <= and >= instead of == in the checks. also tightened layout up using some absolute positioning. demo is now ready to integrate with the site

--- a/red_dawn_style.css
+++ b/red_dawn_style.css
@@ -9,6 +9,10 @@ li {
 	display: inline;
 	font-size: 2em;
 }
+nav {
+	position: relative;
+	top: -150px;
+}
 h1.logo{		 /*logo image replaces h1 text*/
 	width: 800px;
 	height: 394px;
